feat(i18n): update continue button text for model selection step in English and French

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1134,7 +1134,7 @@
         "openai": "OpenAI API Keys",
         "anthropic": "Anthropic Console"
       },
-      "continueButton": "Continue to Channels",
+      "continueButton": "Continue to Model Selection",
       "loading": "Loading AI settings..."
     },
     "modelSelectionStep": {
