feat: utiliser allModels au lieu de discoveredModels dans EmbeddingSelectionStep et ModelSelectionStep feat(i18n): ajouter la clé "selectProvider" dans les fichiers de langue anglais et français

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1141,6 +1141,7 @@
       "title": "Select Your LLM",
       "subtitle": "Choose which language model you'd like to use for your Second Brain. You can change this later in settings.",
       "providerTitle": "Available Models from {{provider}}",
+      "selectProvider": "Select Provider",
       "selectModel": "Select Model",
       "chooseModel": "Choose a model...",
       "modelDescription": "This model will be used for conversations, analysis, and reasoning tasks.",
@@ -1152,6 +1153,7 @@
       "title": "Select Embedding Model",
       "subtitle": "Choose an embedding model for semantic search and memory organization. This is required for the system to work properly.",
       "providerTitle": "Available Embedding Models from {{provider}}",
+      "selectProvider": "Select Provider",
       "selectModel": "Select Embedding Model",
       "chooseModel": "Choose an embedding model...",
       "modelDescription": "This model will be used to vectorize text for semantic search and memory retrieval.",
